# cbbo-benchmarks

./: README.md  main.py  pyproject.toml
example/: cbbo-array.toml  cbbo-bench.toml  cbbo-tables.toml  cbbo.toml
src/cbbo_benchmarks/: __init__.py  __main__.py  benchmark.py  config.py  plotter.py  runner.py  scorer.py  utils.py
src/cbbo_benchmarks/benchmarks/: ackley.py  branin.py  easom.py  griewank.py  hartmann6D.py  levy.py  michal.py  rosen.py  schwefel.py  shekel.py
